Create list in the file task1.html

--- a/lesson-7-html-css/style.css
+++ b/lesson-7-html-css/style.css
@@ -11,3 +11,21 @@ p em {
     background-color: green;
     color: white;
 }
+h2 {
+    color: orange;
+}
+h2 ~ h2 {
+    color: blue;
+}
+span {
+    font-weight: bold;
+}
+ol > li {
+    color: red;
+}
+.fruit-ogorod {
+    color: gray;
+}
+.fruit-sklad {
+    color: green;
+}
