Add styles to table in task1.html

--- a/lesson-7-html-css/style.css
+++ b/lesson-7-html-css/style.css
@@ -29,3 +29,42 @@ ol > li {
 .fruit-sklad {
     color: green;
 }
+table {
+    width: 70%;
+    border-top: solid gray;
+    border-right: solid black;
+    border-bottom: solid black;
+    border-left: solid gray;
+}
+td {
+        border-top: solid black;
+    border-right: solid gray;
+    border-bottom: solid gray;
+    border-left: solid black;
+}
+td~td {
+    text-align: center;
+    font-weight: bold;
+}
+[rowspan] {
+    text-align: center;
+    font-weight: bold;
+}
+[colspan] {
+    text-align: center;
+    font-weight: bold;
+}
+.number {
+    color: white;
+    background-color: green;
+}
+.names {
+    text-align: left;
+    font-weight: bold;
+    color: orange;
+}
+#urok1 {
+    text-align: center;
+    font-weight: bold;
+}
+
