--- a/lesson-7-html-css/style2.css
+++ b/lesson-7-html-css/style2.css
@@ -1,4 +1,5 @@
 [href="task2.html"] {
+    color: blue;
     font-weight: bold;
 }
 [href^="https://"] {
@@ -8,4 +9,7 @@
 [href*="google"] {
     color: #666;
     font-weight: bold;
+}
+/*[target="_blank"] */span {
+    color: #f70;
 }
