--- a/lesson-10-layouts/Style1.css
+++ b/lesson-10-layouts/Style1.css
@@ -43,3 +43,124 @@ sup, sub {
 sup {
     vertical-align: top;
 }
+
+img {
+    padding: 4px 15px 2px 15px;
+}
+
+ul {
+    width: 200px;
+    margin-top: -177px;
+    margin-left: -30px;
+}
+
+ul li {
+    list-style-type: none;
+    font-size: 12px;
+    color: #999CA3;
+    letter-spacing: 0.5px;
+    height: 25px;
+    border: white 1px solid;
+
+}
+
+ul li:nth-child(even) {
+    background-color: #F5F5F6;
+}
+
+ul li:nth-child(odd) {
+    background-color: #EDF5FD;
+}
+
+body {
+    font-family: "Open Sans", Arial, sans-serif;
+}
+
+.price {
+    background-color: #EE8129;
+    border-radius: 4px;
+    box-shadow: 1px 0 3px 3px rgba(0, 0, 0, .1);
+    color: white;
+    width: 220px;
+    height: 370px;
+    margin-bottom: 20px;
+    padding-top: 5px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.price-name {
+    background-color: white;
+    height: 308px;
+    width: 214px;
+    margin: -333px 3px 3px 3px;
+    padding-top: 1px;
+}
+
+div p {
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.price-name-value {
+    font-size: 56px;
+    font-weight: 700;
+    margin: 0;
+}
+
+sup, sub {
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: none;
+}
+
+sup {
+    vertical-align: top;
+}
+
+img {
+    padding: 4px 15px 2px 15px;
+}
+
+.price-options {
+    width: 200px;
+    margin-top: -177px;
+    margin-left: -30px;
+}
+
+.price-options li {
+    list-style-type: none;
+    font-size: 12px;
+    color: #999CA3;
+    letter-spacing: 0.5px;
+    height: 25px;
+    border: white 1px solid;
+
+}
+
+.price-options .price-options-item:nth-child(even) {
+    background-color: #F5F5F6;
+}
+
+.price-options .price-options-item:nth-child(odd) {
+    background-color: #EDF5FD;
+}
+
+.price-enroll {
+    background-color: #EE8129;
+    border-radius: 4px;
+    box-shadow: 0 2px 1px 0 saddlebrown;
+    color: white;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    padding: 10px 50px 5px;
+    border-color: transparent;
+    margin-left: 15px;
+    margin-top: -4px;
+}
+
+.price-enroll:hover {
+    opacity: 0.8;
+}
