--- a/lesson-12-backgrounds/index-ready-spot-host-test-project/packages/packages.css
+++ b/lesson-12-backgrounds/index-ready-spot-host-test-project/packages/packages.css
@@ -1,7 +1,7 @@
 body {
     background: url("../images/plans-background.jpg") no-repeat;
     background-size: cover;
-    font-family: "Anton", sans-serif;
+    font-family: "Montserrat", sans-serif;
     padding: 20px 0;
     overflow: hidden;
 }
@@ -56,7 +56,6 @@ body {
     color: #201A19;
     font-size: 18px;
     font-weight: 100;
-    letter-spacing: 1px;
     padding: 10px;
 }
 
